# cnc-simulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: anti-aliasing-solution.md  architecture.md  roadmap.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gcode.rs  lib.rs  main.rs  migrate.py  motion_planner.rs  simulation.rs
src/components/: BottomPanel.tsx  GcodeDrawer.tsx  HelpDialog.tsx  LoadingOverlay.tsx  Sidebar.tsx  StageView.tsx  SystemConsole.tsx  TimelinePanel.tsx  TopBar.tsx
src/features/simulation/: motionPlanner.ts  simulationStore.ts  simulator.test.ts  simulator.ts
src/features/tooling/: toolingStore.ts
src/features/workspace/: workspaceStore.ts
src/styles/: app.css
src/workers/: parse.worker.ts  simulation.worker.ts
