[package]
name = "cnc-simulator"
version = "0.1.0"
description = "Standalone CNC relief simulation desktop application"
authors = ["Codex"]
edition = "2021"

[lib]
name = "cnc_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.2", features = [] }
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-shell = "2.0.1"
